<resources>
    <string name="app_name">Timer_quizzDos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name='ND'>-</string>
    <string name="cero">0.</string>
    <string name="trece">13</string>
    <string name="tema">Distribucion de pobabilidades</string>
    <string name="todo">TODO</string>
    <string name="suguiente">Suguiente</string>
    <string name="continuar">Continuar</string>
    <string name="tiempo">00:01:34</string>
    <string name="premedio">Premedio</string>
    <string name="logo_description">Logo de TimerQuiz</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">LOGIN</string>
    <string name="register_prompt">Aun no tienes cuenta? <font color='#00FFFF'>Registrate</font></string>
    <string name="nombre_tema">Nombre tema</string>
    <string name="agregar">Agregar</string>
    <string name="nombre">Nombre</string>
    <string name="numero">Número de celular</string>
    <string name="registrar">Registrar</string>
    <string name="promp_login">Ya es usuario? Login</string>


</resources>